@@ -1,19 +1,16 @@
 ---
-version: 4
-datadir: data
+version: 5
+defaults:
+  datadir: data
+  data_hash: yaml_data
 hierarchy:
   - name: "OS + Release"
-    backend: "yaml"
-    path: "os/%{facts.operatingsystem}-%{facts.operatingsystemmajrelease}"
+    path: "os/%{facts.operatingsystem}-%{facts.operatingsystemmajrelease}.yaml"
   - name: "OS"
-    backend: "yaml"
-    path: "os/%{facts.operatingsystem}"
+    path: "os/%{facts.operatingsystem}.yaml"
   - name: "OSFamily"
-    backend: "yaml"
-    path: "os/%{facts.osfamily}"
+    path: "os/%{facts.osfamily}.yaml"
   - name: "Kernel"
-    backend: "yaml"
-    path: "os/%{facts.kernel}"
+    path: "os/%{facts.kernel}.yaml"
   - name: "Common"
-    backend: "yaml"
-    path: "common"
+    path: "common.yaml"
